--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ footer{
     background-position: center;
     padding: 50px 0 50px;
 }
-h3 {
+h3,h4{
     color: cornsilk;
     font-family:  'gabi';
     text-align: center;
