--- a/style.css
+++ b/style.css
@@ -96,6 +96,16 @@ header{
     background-size: cover;
     background-position: center;
 }
+.postsportifo{
+    position: relative;
+    background: url(menupost2.jpg);
+    min-height: 200px;
+    background-size: cover;
+    background-position: center;
+    margin-top: 8   0px;
+    
+}
+
 .img-thumbnail{
     width: 200px;
     height: 150px;
@@ -145,10 +155,10 @@ p{
     -webkit-backdrop-size: cover;
     background-size: cover;
 }
-section div img{
+section img{
     height: 277px;
     min-height: 400px;
-    
+    position: relative;  
 }
 .carousel-caption{
     bottom: 20px;
@@ -181,16 +191,25 @@ section div img{
     color: white;
     text-align: center;
 }
-
-
-.img-fluid{
-    width: 100%;
-    height: auto;
+.imgpost{
+    margin-top: 25px;
+    position: relative;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 .text_post{
     padding: 5px;
     color: white !important; 
+}
+
+#carousel-table .carousel-control .icon-prev,
+#carousel-table .carousel-control .icon-next,
+#carousel-table .carousel-control .glyphicon-chevron-left,
+#carousel-table .carousel-control .glyphicon-chevron-right {
+    top: 0%;
+    color: #333;
+    margin-top: 20px;
 }
 
 @media (max-width: 768px)
