--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
    
 }
 @font-face{
+    font-family: 'hunble';
+    src: url(fonts/Humblle\ Rought\ Caps.ttf);
+   
+}
+@font-face{
     font-family: 'gabi';
     src: url(fonts/Gabriela-Regular.ttf);
 }
@@ -19,6 +24,7 @@ header{
     position: absolute;
     z-index: 10;
     width: 100%;
+    background-color: #cb4752;
 }
 .navbar{
     padding: 20px 0;
@@ -27,8 +33,8 @@ header{
     
     text-transform: uppercase;
     font-size: 1em;
-    color: #cb4752;
-    font-family: Nothing You Could Do;
+    color: white!important;
+    font-family: hunble;
     font-size: 40px;
     
 }
