--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
     z-index: 1;
     width: 100%;
     background-color:black;
+    background:black;
+    transition: 1.0s;
 }
 .navbar{
     padding: 0 0;
@@ -41,19 +43,18 @@
 .header-s{
     position: fixed;
     background-color: #cb4752;
+    background:#cb4752;
+    transition: 1.0s;
+}
+.header-s::after{
     
-
 }
 .nav-item{
     font-weight: 100;
     text-transform: uppercase;
     font-family: 'gabi';
 }
-.navbar-dark .navbar-nav .nav-item .nav-link:hover,
-.navbar-dark .navbar-nav .nav-item.active .nav-link
-{
-    color: white;
-}
+
 .active{
     
     text-decoration: underline;
